# backend/src/controllers/MemberController.ts
@@ -26,7 +26,7 @@ import { generateToken } from "../utils/jwt";
 import * as express from "express";
 
 // API 경로를 /members로 지정
-@Route("members")
+@Route("api/members")
 // Swagger 문서에서 'Member' 태그로 이 컨트롤러의 API들을 묶기
 @Tags("Member")
 export class MemberController extends Controller {
